--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chatty</title>
+  <link href="https://fonts.googleapis.com/css2?family=Margarine&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/89776cb07c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div id="app"></div>
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">Chatty</a>
+    </nav>
+  <div id="currentUserMessages"></div>
 </body>
 </html>
