can add messages

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
     <a class="navbar-brand" href="#">Chatty</a>
     </nav>
   <div id="currentUserMessages"></div>
+  <div id="add-message"></div>
 </body>
 </html>
