remove working and fixed bug in adding messages

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,13 @@
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">Chatty</a>
     </nav>
-  <div id="currentUserMessages"></div>
+  <div id="messages"></div>
   <div id="add-message"></div>
+  <form class="form-inline" id="message-form">
+  <input class="form-control-lg mr-sm-2" id="message" type="text" placeholder="type message...">
+  </form>
+  <button class="btn btn-outline-success btn-lg mx-4 my-2 my-sm-0" type="submit" id="submit"><i class="fas fa-arrow-circle-up"></i></button>
+  <button class="btn btn-outline-success btn-lg mx-4 my-2 my-sm-0" type="submit" id="clear">Clear All Messages</button>
+
 </body>
 </html>
