working on large text

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
       <input class="form-control-lg mr-sm-2" id="message" type="text" placeholder="type message...">
       </form>
       <button class="btn btn-outline-success btn-lg mx-4 my-2 my-sm-0" type="submit" id="submit"><i class="fas fa-arrow-circle-up"></i></button>
-      <button class="btn btn-outline-success btn-lg mx-4 my-2 my-sm-0" type="submit" id="clear">Clear All Messages</button>  
+      <button class="btn btn-outline-success btn-lg mx-4 my-2 my-sm-0" type="submit" id="clear">Clear All Messages</button> 
+      <div>
+        <input type="checkbox" id="large-text" name="large-text">
+        <label for="large-text">Large Text</label>
+      </div>
     </nav>
   <div id="messages"></div>
   <div id="add-message"></div>  
