working on large text

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Margarine&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/89776cb07c.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body id="body">
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">Chatty</a>
     <form class="form-inline" id="message-form">
