dark mode mvp only

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
       <div>
         <input type="checkbox" id="large-text" name="large-text">
         <label for="large-text">Large Text</label>
+        <input type="checkbox" id="dark-mode" name="dark-mode">
+        <label for="dark-mode">Dark Mode</label>
       </div>
     </nav>
   <div id="messages"></div>
