--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       </form>
       <button class="btn btn-outline-success btn-lg mx-4 my-2 my-sm-0" type="submit" id="submit"><i class="fas fa-arrow-circle-up"></i></button>
       <button class="btn btn-outline-success btn-lg mx-4 my-2 my-sm-0" type="submit" id="clear">Clear All Messages</button> 
+      <div id="select-users"></div>
       <div>
         <input type="checkbox" id="large-text" name="large-text">
         <label for="large-text">Large Text</label>
