messages displaying in correct order

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <label for="dark-mode">Dark Mode</label>
       </div>
     </nav>
-  <div id="messages"></div>
+  <div class="d-flex flex-column-reverse" id="messages"></div>
   <div id="add-message"></div>  
 </body>
 </html>
